...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d7n-gj-4pH" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvider="target">
                                            <rect key="frame" x="0.0" y="0.0" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Category"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WTa-kG-PVj" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="54" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Subcategory"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="83A-Fn-wQ0" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="108" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Process Type"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-c3-Ayb" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="162" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Brand"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="142-LI-pdn" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="216" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Model"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AG4-yN-f7g" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="270" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Type"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LKC-Fn-zCP" customClass="LabeledDropDown" customModule="MazaadyiOSTask" customModuleProvi
                                            <rect key="frame" x="0.0" y="324" width="333" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Transmission Type"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iVy-Zx-50y">
                                    <rect key="frame" x="30" y="635" width="333" height="38"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Submit"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="filled" title="Submit">
...
